[package]
name = "playout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", default-features = false, features = ["parsing", "derive"] }
proc-macro2 = { version = "1", default-features = false, features = ["span-locations"] }
bitflags = "2"
glsl = { version = "6", optional = true }
Inflector = { version = "0.11", default-features = false }

[features]
default = ["glsl"]
